@@ -1,7 +1,6 @@
 package com.coremedia.blueprint.elastic.social.cae.controller;
 
 import com.coremedia.elastic.social.api.comments.Comment;
-import com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
 import java.util.List;
@@ -15,7 +14,7 @@ public class CommentWrapperTest {
   public void testWrapper() {
     CommentWrapper subCommentWrapper1 = mock(CommentWrapper.class);
     CommentWrapper subCommentWrapper2 = mock(CommentWrapper.class);
-    List<CommentWrapper> subCommentWrappers = ImmutableList.of(subCommentWrapper1, subCommentWrapper2);
+    List<CommentWrapper> subCommentWrappers = List.of(subCommentWrapper1, subCommentWrapper2);
 
     Comment comment = mock(Comment.class);
 
