@@ -11,7 +11,6 @@ import com.coremedia.cap.user.User;
 import com.coremedia.objectserver.web.HandlerHelper;
 import com.coremedia.objectserver.web.UserVariantHelper;
 import com.coremedia.objectserver.web.links.Link;
-import com.google.common.collect.ImmutableMap;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -77,11 +76,9 @@ public class P13NNavigationHandler extends PageHandlerBase {
     Navigation context = getContextHelper().currentSiteContext();
     UriComponentsBuilder result = UriComponentsBuilder.fromPath(uriPattern.toString());
     result = addLinkParametersAsQueryParameters(result, linkParameters);
-    return result.buildAndExpand(
-            ImmutableMap.of(
+    return result.buildAndExpand(Map.of(
                     SEGMENT_ROOT, getPathSegments(context).get(0),
-                    ID_VARIABLE, page.getContentId()
-            ));
+                    ID_VARIABLE, page.getContentId()));
   }
 
   @NonNull
