@@ -9,14 +9,14 @@ import com.coremedia.livecontext.ecommerce.common.CommerceConnection;
 import com.coremedia.livecontext.ecommerce.common.CommerceId;
 import com.coremedia.livecontext.ecommerce.common.StoreContext;
 import com.coremedia.livecontext.ecommerce.common.Vendor;
-import com.coremedia.livecontext.ecommerce.workspace.WorkspaceId;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import org.springframework.web.util.UriUtils;
 
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 /**
@@ -26,7 +26,6 @@ import java.util.Map;
 class CommerceBeanDelegateProvider {
 
   private static final String SITE_ID = "{siteId:.*}";
-  private static final WorkspaceId WORKSPACE_ID = WorkspaceId.of("{workspaceId:.*}");
   private static final String EXTERNAL_ID = "{id:.*}";
   private static final CatalogAlias CATALOG_ALIAS_TEMPLATE_VAR = CatalogAlias.of("CATALOG_ALIAS_TEMPLATE_VAR");
   private static final String CATALOG_ALIAS = "{catalogAlias:.*}";
@@ -37,7 +36,7 @@ class CommerceBeanDelegateProvider {
           .withCatalogAlias(CATALOG_ALIAS_TEMPLATE_VAR)
           .build();
 
-  private static final ImmutableMap<String, Object> COMMERCE_BEAN_DELEGATE = ImmutableMap.of(
+  private static final Map<String, Object> COMMERCE_BEAN_DELEGATE = Map.of(
           "id", TEMPLATE_COMMERCE_ID,
           "externalId", EXTERNAL_ID
   );
@@ -48,29 +47,24 @@ class CommerceBeanDelegateProvider {
   @NonNull
   static Map<String, Object> get() {
     StoreContext storeContext = createStoreContext();
-    return ImmutableMap.<String, Object>builder()
-            .putAll(COMMERCE_BEAN_DELEGATE)
-            .put("context", storeContext)
-            .build();
+    HashMap<String, Object> map = new HashMap<>(COMMERCE_BEAN_DELEGATE);
+    map.put("context", storeContext);
+    return Collections.unmodifiableMap(map);
   }
 
   @NonNull
   static StoreContext createStoreContext() {
     CommerceConnection connection = new BaseCommerceConnection();
     return StoreContextBuilderImpl.from(connection, SITE_ID)
-            .withWorkspaceId(WORKSPACE_ID)
             .build();
   }
 
   @NonNull
   static String postProcess(@NonNull String commerceBeanUri, @Nullable StoreContext storeContext) {
     StoreContext context = storeContext != null ? storeContext : createStoreContext();
-
-    String workspaceId = WORKSPACE_ID.value();
     return commerceBeanUri
             .replace(CATALOG_ALIAS_TEMPLATE_VAR.value(), CATALOG_ALIAS)
-            .replace(SITE_ID, context.getSiteId())
-            .replace(workspaceId, context.getWorkspaceId().map(WorkspaceId::value).orElse(workspaceId));
+            .replace(SITE_ID, context.getSiteId());
   }
 
   @NonNull
