@@ -1,11 +1,10 @@
 package com.coremedia.blueprint.cae.contentbeans;
 
 import com.coremedia.blueprint.base.cae.web.taglib.ImageFunctions;
+import com.coremedia.blueprint.cae.contentbeans.testing.ContentBeanTestBase;
 import com.coremedia.blueprint.common.contentbeans.CMArticle;
 import com.coremedia.blueprint.common.contentbeans.CMImageMap;
 import com.coremedia.blueprint.common.contentbeans.CMPicture;
-import com.coremedia.blueprint.cae.contentbeans.testing.ContentBeanTestBase;
-import com.google.common.collect.ImmutableList;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -43,7 +42,7 @@ public class CMImageMapImplTest extends ContentBeanTestBase {
     assertEquals("one", imageMapArea.get(ImageFunctions.ALT));
     assertEquals(article, imageMapArea.get(ImageFunctions.LINKED_CONTENT));
     assertEquals("100,100,200,200", imageMapArea.get(ImageFunctions.COORDS));
-    assertEquals(ImmutableList.of(new Point2D.Double(100, 100), new Point2D.Double(200, 200)),
+    assertEquals(List.of(new Point2D.Double(100, 100), new Point2D.Double(200, 200)),
             imageMapArea.get(ImageFunctions.COORDS_AS_POINTS));
 
   }
