@@ -1,16 +1,19 @@
 package com.coremedia.blueprint.cae.search.facet;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 
-import static org.junit.jupiter.api.Assertions.*;
+import java.util.Collection;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class FacetFilterBuilderTest {
 
   @Test
   void buildEmpty() {
-    assertEquals("", new FacetFilterBuilder(ImmutableMap.of()).build());
+    assertEquals("", new FacetFilterBuilder(Map.of()).build());
   }
 
   @Test
@@ -18,25 +21,27 @@ class FacetFilterBuilderTest {
     FacetValue value1 = new FacetValue("A", "1", 1);
     FacetValue value2 = new FacetValue("A", "2", 2, "2", false);
     FacetValue value3 = new FacetValue("B", "3", 3);
-    assertEquals("", new FacetFilterBuilder(
-      ImmutableMap.of("A", ImmutableList.of(value1, value2), "B", ImmutableList.of(value3))
-    ).build());
+
+    Map<String, Collection<FacetValue>> map = new LinkedHashMap<>();
+    map.put("A", List.of(value1, value2));
+    map.put("B", List.of(value3));
+    assertEquals("", new FacetFilterBuilder(map).build());
   }
 
   @Test
   void buildFilter() {
     FacetValue facetValue = new FacetValue("facet", "v", 1, "v", true);
-    assertEquals("facet:v", new FacetFilterBuilder(ImmutableMap.of("facet", ImmutableList.of(facetValue))).build());
+    assertEquals("facet:v", new FacetFilterBuilder(Map.of("facet", List.of(facetValue))).build());
   }
 
   @Test
   void buildMixed() {
     FacetValue filter = new FacetValue("facet", "v", 1, "v", true);
     FacetValue noFilter = new FacetValue("B", "3", 3);
-    assertEquals("facet:v", new FacetFilterBuilder(ImmutableMap.of(
-      "facet", ImmutableList.of(filter),
-      "B", ImmutableList.of(noFilter)
-    )).build());
+    Map<String, Collection<FacetValue>> map = new LinkedHashMap<>();
+    map.put("facet", List.of(filter));
+    map.put("B", List.of(noFilter));
+    assertEquals("facet:v", new FacetFilterBuilder(map).build());
   }
 
   @Test
